fix: restore dark mode background styling and refine theme color variables

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@
     width: 100%;
     @apply bg-white;
     @apply text-sm;
-    /* @apply dark:bg-black; */
+    @apply dark:bg-black;
   }
 
   #root.app {
@@ -44,4 +44,28 @@
       var(--tw-gradient-stops)
     );
   }
+}
+
+@theme {
+  --color-white: #ffffff;
+
+  /*color- Gray Palette */
+  --color-gray-100: #f3f4f6;
+  --color-gray-200: #e5e7eb;
+  --color-gray-300: #d1d5db;
+  --color-gray-500: #6b7280;
+  --color-gray-700: #374151;
+  --color-gray-800: #1f2937;
+
+  /*color- Blue Palette */
+  --color-blue-200: #93c5fd;
+  --color-blue-400: #60a5fa;
+  --color-blue-500: #3b82f6;
+
+  /* Custom Semantic Colors */
+  --color-dark-bg: #101214;
+  --color-dark-secondary: #1d1f21;
+  --color-dark-tertiary: #3b3d40;
+  --color-blue-primary: #0275ff;
+  --color-stroke-dark: #2d3135;
 }
